Ensure header navigation spacing and borders appear correctly regardless of colour variants

--- a/src/nhsuk/components/header/_index.scss
+++ b/src/nhsuk/components/header/_index.scss
@@ -41,11 +41,12 @@ $_header-item-active-size: $nhsuk-focus-width;
 ////
 /// Header component
 ///
-/// This component has three colour variations:
+/// This component has 4 colour variations:
 ///
 /// 1. Blue background
-/// 2. White background with blue background for navigation
-/// 3. White background
+/// 2. Blue background with white background for navigation
+/// 3. White background with blue background for navigation
+/// 4. White background
 ///
 /// The behaviour with regards to navigation is as follows:
 ///
@@ -328,20 +329,14 @@ $_header-item-active-size: $nhsuk-focus-width;
   border: 0 solid $color_nhsuk-white;
 
   @include nhsuk-print-hide;
-
-  @include nhsuk-media-query($until: tablet) {
-    margin-top: math.div($nhsuk-gutter, 2) * -1;
-  }
 }
 
 .nhsuk-header__navigation-container {
+  border-top: 1px solid $nhsuk-secondary-border-color;
+
   @include nhsuk-media-query($until: tablet) {
     position: relative;
     z-index: 10;
-  }
-
-  @include nhsuk-media-query($from: tablet) {
-    border-top: 1px solid $nhsuk-secondary-border-color;
   }
 }
 
@@ -585,14 +580,10 @@ $_header-item-active-size: $nhsuk-focus-width;
 
   .nhsuk-header__navigation {
     background-color: $color_nhsuk-blue;
-
-    @include nhsuk-media-query($until: tablet) {
-      margin-top: 0;
-    }
   }
 
   .nhsuk-header__navigation-container {
-    border-top-width: 0;
+    border-top-color: transparent;
   }
 }
 
@@ -600,19 +591,14 @@ $_header-item-active-size: $nhsuk-focus-width;
   .nhsuk-header__navigation {
     background-color: $color_nhsuk-white;
     color: $color_nhsuk-blue;
-
-    @include nhsuk-media-query($until: tablet) {
-      margin-top: -(nhsuk-spacing(3));
-    }
-  }
-
-  .nhsuk-header__navigation-container {
-    border-color: $color_nhsuk-grey-4;
-    border-top-width: 1px;
   }
 
   .nhsuk-header__navigation-link {
     @include _header-link-style;
+  }
+
+  &.nhsuk-header--white .nhsuk-header__navigation-container {
+    border-top-color: $color_nhsuk-grey-4;
   }
 }
 
